# business-workflow-agent

./: .env.example  .gitignore  .mailmap  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_cli.py
eval/: benchmark.py  metrics.py
fine_tuning/: evaluate.py  train_lora.py
fine_tuning/configs/: lora_config.yaml
fine_tuning/data/: generate_dataset.py
k8s/: deployment.yaml  service.yaml
src/agent/: graph.py  nodes.py  state.py  tools.py
src/api/: server.py
src/approval/: human_loop.py
src/memory/: vector_store.py
tests/: test_graph.py  test_memory.py  test_tools.py
